simplify validation and add css, csrf

--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/auth/login.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/auth/login.html
@@ -4,7 +4,7 @@
 {% block title %}登录{% endblock %}
 
 {% block content %}
-<div class="pb-2 mt-4 mb-2 border-bottom">
+<div class="page-header">
     <h1>请登录</h1>
 </div>
 {{ render_form(form) }}
