--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/layout.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/layout.html
@@ -27,12 +27,8 @@
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="nav navbar-nav mr-auto">
-
-                </ul>
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav ml-auto">
                     {% if current_user.is_anonymous %}
                     {{render_nav_item('auth.login', '登录')}}
                     {% else %}
