--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/static/css/style.css
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/static/css/style.css
@@ -10,6 +10,35 @@ nav {
     padding-bottom: 38px;
 }
 
+.tip {
+    /* from github.com */
+    position: relative;
+    padding: 40px;
+    text-align: center;
+    background-color: #fafbfc;
+    border: 1px solid #e1e4e8;
+    border-radius: 3px;
+    box-shadow: inset 0 0 10px rgba(27, 31, 35, 0.05);
+}
+
+.hide {
+    display: none;
+}
+
+.inline {
+    display: inline;
+}
+
+.page-header {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.page-footer {
+    padding-top: 40px;
+}
+
+
 /* footer */
 
 footer {
