--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/auth/register.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/auth/register.html
@@ -4,7 +4,7 @@
 {% block title %}注册{% endblock %}
 
 {% block content %}
-<div class="pb-2 mt-4 mb-2 border-bottom">
+<div class="page-header">
     <h1>请注册</h1>
 </div>
 {{ render_form(form) }}
